summaries/A_Run_All/errors.txt
❌ normalize_todays_games ERROR:
Traceback (most recent call last):
  File "/home/runner/work/sports-betting-site/sports-betting-site/scripts/normalize_todays_games.py", line 63, in <module>
    normalize_todays_games()
  File "/home/runner/work/sports-betting-site/sports-betting-site/scripts/normalize_todays_games.py", line 42, in normalize_todays_games
    raise ValueError(f"❌ Unrecognized pitcher(s) found:\n{missing[['home_team', 'away_team', 'pitcher_home', 'pitcher_away']]}")
ValueError: ❌ Unrecognized pitcher(s) found:
   home_team away_team  pitcher_home         pitcher_away
14  Mariners    Astros  Evans, Logan  Jr, Lance McCullers

---

❌ combine_pitcher_weather_park_away ERROR:
  File "/home/runner/work/sports-betting-site/sports-betting-site/scripts/combine_pitcher_weather_park_away.py", line 30
    on=["last_name, first_name", "away_team
                                 ^
SyntaxError: unterminated string literal (detected at line 30)

---

